--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li audiourl="Queen of Denmark Cures Covid19 With Violence.mp3" cover="Queen.jpg" artist="">Queen of Denmark Cures Covid w/ Violence</li>
             <li audiourl="Space Dungeon.mp3" cover="SpaceDungeon.jpg" artist="">Space Dungeon</li>
             <li audiourl="Sunshine.mp3" cover="suncream.jpg" artist="">Sun Cream</li>
-            <li audiourl="64Dipticore.mp3" cover="64Dipticore.jpg" artist="">The Robo Rainbow Initiative</li>
+            <li audiourl="64Dipticore.mp3" cover="rainbow.jpg" artist="">The Robo Rainbow Initiative</li>
             <li audiourl="Total Viking Power (early).mp3" cover="TotalVikingPower.jpg" artist="">Total Viking Power</li>
 
 
