--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- <li audiourl="music/Arabian Fight.mp3" cover="cover2.jpg" artist="Artist 2">02.mp3</li>
             <li audiourl="music/Colonization GJ.mp3" cover="cover3.jpg" artist="Artist 3">03.mp3</li> -->
         </ul>
-
     </div>
+    <!-- <div class="centered-white">hi</div> -->
 </body>
 </html>
