--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li audiourl="OfficeDungeonFrogCPR2.mp3" cover="Office.jpg" artist="">Office Dungeon</li>
             <li audiourl="Paul's Trip to Brain Hills aka. Detective Penguin.mp3" cover="Paul.jpg" artist="">Paul's Trip to Brain Hills</li>
             <li audiourl="Picnic Poodles.mp3" cover="picnic.png" artist="">Picnic Poodles <span class="bb">(BeepBox)</span></li>
-            <li audiourl="Pointy Hazards.mp3" cover="pointy.jpg" artist="">Pointy Hazards</li>
+            <li audiourl="Pointy Hazards.mp3" cover="pointy.jpg" artist="">Pointy Hazards <span style="color:#6ad3e1">(Fakebit)</span></li>
             <li audiourl="Queen of Denmark Cures Covid19 With Violence.mp3" cover="Queen.jpg" artist="">Queen of Denmark Cures Covid w/ Violence</li>
             <!-- <li audiourl="Space Dungeon.mp3" cover="SpaceDungeon.jpg" artist="">Space Dungeon</li> -->
             <!-- <li audiourl="64Dipticore.mp3" cover="rainbow.jpg" artist="">The Robo Rainbow Initiative</li> -->
